--- a/tests/04-hook-engine/index.html
+++ b/tests/04-hook-engine/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>03-fill-screen</title>
+    <title>04-hook-engine</title>
 </head>
 <body>
+    <p>Check the console</p>
     <script src="../../build/bundle.js"></script>
     <script src="index.js"></script>
 </body>
